--- a/vsl-react/vessel-home/package.json
+++ b/vsl-react/vessel-home/package.json
@@ -34,8 +34,7 @@
 		"slick-carousel": "^1.8.1",
 		"smooth-scrolling": "^2.3.12",
 		"styled-components": "^5.3.0",
-		"web-vitals": "^1.0.1",
-		"webpack": "^4.44.2"
+		"web-vitals": "^1.0.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
