--- a/vsl-react/vessel-home/package.json
+++ b/vsl-react/vessel-home/package.json
@@ -23,6 +23,7 @@
 		"react-dom": "^17.0.2",
 		"react-donut": "^1.1.4",
 		"react-native-chart-kit": "^6.11.0",
+		"react-responsive-carousel": "^3.2.22",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"react-scroll-to-top": "^1.0.8",
